<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView_wecome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#FF8C00"
        android:text="@string/about_alc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_wecome"
        app:layout_constraintStart_toStartOf="@+id/textView_wecome"
        app:layout_constraintTop_toBottomOf="@+id/textView_wecome" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FF8C00"
        android:text="@string/my_profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_about"
        app:layout_constraintStart_toStartOf="@+id/button_about"
        app:layout_constraintTop_toBottomOf="@+id/button_about" />
</androidx.constraintlayout.widget.ConstraintLayout>